--- a/Auto Opened Site/manifest.json
+++ b/Auto Opened Site/manifest.json
@@ -15,12 +15,12 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "Fixed/popup.html",
     "default_icon": {
-      "128": "icon.png"
+      "128": "Fixed/icon.png"
     }
   },
   "icons": {
-    "128": "icon.png"
+    "128": "Fixed/icon.png"
   }
 }
